# substack-mcp

./: .gitignore  README.md  pyproject.toml
research/: 00-substack-overview.md
src/substack_mcp/: __init__.py  auth.py  browser_setup.py  chrome_setup.py  client.py  server.py  setup_cli.py
